[metadata]
name = pplay
author = wolf
author_email = wolf@prima.local
url = https://gitlab/wolf/pplay
description = Python audio player
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: Public Domain
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Video
    Topic :: System :: Archiving
platforms = any
long_description = file: README.md

[options]
zip_safe = True
python_requires = >=3.4,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,
install_requires =
  mutagen
packages =
   ppplay
#py_modules =
#   vgen

[bdist_wheel]
universal=0
#python-tag=py3
